made logo resposive and changed the size of the h2

--- a/public/html/landing.html
+++ b/public/html/landing.html
@@ -155,6 +155,12 @@
     .navbar.active ul {
         display: flex; /* Show the menu when active */
     }
+    .logo img{
+        width:300px;
+    }
+    .hero-section h2{
+       font-size: 35px;
+    }
 }
 
     </style>
